Working version with ingress: 0.6.0

--- a/foodapp/templates/ingress.yaml
+++ b/foodapp/templates/ingress.yaml
@@ -22,6 +22,9 @@ spec:
       secretName: {{ .secretName }}
     {{- end }}
   {{- end }}
+  {{- if .Values.ingress.className }}
+  ingressClassName: {{ .Values.ingress.className }}
+  {{- end }}
   defaultBackend:
     service:
       name: {{ $fullName }}
