--- a/foodapp/values.yaml
+++ b/foodapp/values.yaml
@@ -50,10 +50,12 @@ service:
 
 ingress:
   enabled: true
-  className: ""
-  annotations: {}
+  className: "alb"
+  annotations:
     # kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
+    alb.ingress.kubernetes.io/scheme: internet-facing
+    alb.ingress.kubernetes.io/target-type: ip
   hosts:
     - host: foodapp-demo.com
       paths:
