--- a/foodapp/values.yaml
+++ b/foodapp/values.yaml
@@ -50,12 +50,12 @@ service:
 
 ingress:
   enabled: true
-  className: "alb"
+  className: "nginx"
   annotations:
-    # kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
-    alb.ingress.kubernetes.io/scheme: internet-facing
-    alb.ingress.kubernetes.io/target-type: ip
+    # kubernetes.io/ingress.class: "alb"
+    # alb.ingress.kubernetes.io/scheme: internet-facing
+    # alb.ingress.kubernetes.io/target-type: ip
   hosts:
     - host: foodapp-demo.com
       paths:
