--- a/foodapp/values.yaml
+++ b/foodapp/values.yaml
@@ -87,10 +87,6 @@ autoscaling:
 
 nodeSelector: {}
 
-tolerations:
-  - effect: NoSchedule
-    key: eks.amazonaws.com/compute-type
-    operator: Equal
-    value: fargate
+tolerations: {}
 
 affinity: {}
